src/test/ui/rfc-2632-const-trait-impl/staged-api.unstable.stderr
error: `<Foo as staged_api::MyTrait>::func` is not yet stable as a const fn
  --> $DIR/staged-api.rs:35:5
   |
LL |     Foo::func();
   |     ^^^^^^^^^^^
   |
   = help: add `#![feature(foo)]` to the crate attributes to enable

error: `<Foo as staged_api::MyTrait>::func` is not yet stable as a const fn
  --> $DIR/staged-api.rs:43:5
   |
LL |     Foo::func();
   |     ^^^^^^^^^^^
   |
   = help: add `#![feature(foo)]` to the crate attributes to enable

error: aborting due to 2 previous errors

